Fixes bug #5588. vio_was_interrupted() function was added to detect read timeout properly on win32.

include/my_global.h:
  Added win32 specific socket timeout error code.
include/violite.h:
  Added vio_was_interrupted function that returns true if operation was
  not completed due to timeout.
sql/mini_client.cc:
  added a check that replication read was not completed due to timeout.
sql/net_serv.cc:
  net->last_errno should be equal to ER_NET_READ_INTERRUPTED in case if read
  operation was not completed due to timeout.
vio/vio.c:
  added initialization code for vio_was_interrupted() function.
vio/viosocket.c:
  Added vio_was_interrupted function that returns true if operation was
  not completed due to timeout.